--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <path d="M8.75586 8.65234H2.91602V13.0273H9.74219V15H0.445312V0.78125H9.67383V2.77344H2.91602V6.69922H8.75586V8.65234ZM13.7266 4.43359L13.7949 5.6543C14.5762 4.71029 15.6016 4.23828 16.8711 4.23828C19.0716 4.23828 20.1914 5.49805 20.2305 8.01758V15H17.8574V8.1543C17.8574 7.48372 17.7109 6.98893 17.418 6.66992C17.1315 6.3444 16.6595 6.18164 16.002 6.18164C15.0449 6.18164 14.332 6.61458 13.8633 7.48047V15H11.4902V4.43359H13.7266Z" fill="black"/>
     </svg>
     </p>
-    <img src="img/hel" alt="">
+    <img src="img/HelvetArt.svg" class="logo">
+    <hr>
+    <div class="main">
+        <p class="month-text">May 2020 Show</p>
+        <div class="monrh-block"></div>
+
+    </div>
 </div>
 </body>
 </html>
