--- a/index.html
+++ b/index.html
@@ -26,7 +26,28 @@
     <div class="main">
         <p class="month-text">May 2020 Show</p>
         <div class="monrh-block"></div>
-
+        <hr style="padding-left: 0px; margin-top: 74px; position: absolute" width=" 842px;">
+    <div class="resent-show">
+        <p class="text-header"> Recent shows</p>
+        <div class="month-blocks">
+            <div class="content-month">
+                <p class="month">April 2020</p>
+                <p class="author">@author</p>
+            </div>
+        </div>
+        <div class="month-blocks">
+            <div class="content-month">
+                <p class="month">March 2020</p>
+                <p class="author">@author</p>
+            </div>
+        </div>
+        <div class="month-blocks">
+            <div class="content-month">
+                <p class="month">February 2020</p>
+                <p class="author">@author</p>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
 </body>
