--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             </div>
         </div>
     </div>
+        <hr width="809px" style="padding-right: 0px; position: absolute;">
+        <div class="take-part-block">
+            <p class="text-header">Take part in the next exhibition</p>
+            <div class="block-part"></div>
+        </div>
     </div>
 </div>
 </body>
