--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="header">
     <p class="title">Home</p>
-    <p class="title">About</p>
+    <a href="about.html"> <p class="title">About</p></a>
     <p class="title">Next Show Call</p>
-    <p class="title">Benefits</p>
+    <a href="benefits.html"> <p class="title">Benefits</p></a>
     <p class="title">Past Shows</p>
     <p class="title">Press</p>
     <p class="title">Contact</p>
