--- a/benefits.html
+++ b/benefits.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div class="header">
-    <p class="title">Home</p>
+    <a href="index.html"><p class="title">Home</p></a>
     <a href="about.html"> <p class="title">About</p></a>
     <p class="title">Next Show Call</p>
-    <p class="title">Benefits</p>
+    <a href="benefits.html"><p class="title">Benefits</p></a>
     <p class="title">Past Shows</p>
     <p class="title">Press</p>
     <p class="title">Contact</p>
