--- a/past-shows.html
+++ b/past-shows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/about.css" charset="utf-8">
+    <link rel="stylesheet" href="css/past-shows.css" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
     <meta charset="UTF-8">
 </head>
@@ -11,10 +11,10 @@
     <a href="about.html"> <p class="title">About</p></a>
     <p class="title">Next Show Call</p>
     <a href="benefits.html"> <p class="title">Benefits</p></a>
-    <a href="past-shows.html"><p class="title">Past Shows</p></a>
+    <a href="past-shows.html"> <p class="title">Past Shows</p></a>
     <p class="title">Press</p>
     <a href="contact.html"> <p class="title">Contact</p></a>
-    <a href="search.html"><p class="title">Search</p></a>
+    <a href="search.html"> <p class="title">Search</p></a>
     <p class="title">En <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.43431 7.06569C5.74673 7.3781 6.25327 7.3781 6.56569 7.06569L11.6569 1.97452C11.9693 1.6621 11.9693 1.15557 11.6569 0.843146C11.3444 0.530727 10.8379 0.530727 10.5255 0.843146L6 5.36863L1.47452 0.843146C1.1621 0.530726 0.655566 0.530726 0.343146 0.843146C0.0307266 1.15557 0.0307266 1.6621 0.343146 1.97452L5.43431 7.06569ZM5.2 6L5.2 6.5L6.8 6.5L6.8 6L5.2 6Z" fill="black"/>
     </svg>
@@ -23,13 +23,8 @@
 <img src="images/HelvetArt.svg" class="logo">
 <hr width="1136px;">
 <div class="wrapper">
-<p class="about">About</p>
-<p class="text-about">Consectetur consequat nulla ex consectetur proident dolore. Mollit quis laborum consectetur est do nisi et aute anim. Laborum quis quis quis culpa dolore commodo id qui dolore do laboris.
-
-    Pariatur in ea sint velit pariatur magna exercitation reprehenderit veniam.
-    Ea consectetur labore eu aliqua nisi reprehenderit irure. Duis amet ad laboris consectetur exercitation aliquip excepteur in anim commodo non laborum laborum eiusmod.
-
-    Voluptate ipsum ullamco Lorem adipisicing ullamco officia do dolore incididunt veniam magna dolor.</p>
+    <p class="past-shows">Past Shows</p>
 </div>
+
 </body>
 </html>
