--- a/benefits.html
+++ b/benefits.html
@@ -12,10 +12,10 @@
     <a href="about.html"> <p class="title">About</p></a>
     <p class="title">Next Show Call</p>
     <a href="benefits.html"><p class="title">Benefits</p></a>
-    <p class="title">Past Shows</p>
+    <a href="past-shows.html"><p class="title">Past Shows</p></a>
     <p class="title">Press</p>
-    <p class="title">Contact</p>
-    <p class="title">Search</p>
+    <a href="contact.html"> <p class="title">Contact</p></a>
+    <a href="search.html"> <p class="title">Search</p></a>
     <p class="title">En <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.43431 7.06569C5.74673 7.3781 6.25327 7.3781 6.56569 7.06569L11.6569 1.97452C11.9693 1.6621 11.9693 1.15557 11.6569 0.843146C11.3444 0.530727 10.8379 0.530727 10.5255 0.843146L6 5.36863L1.47452 0.843146C1.1621 0.530726 0.655566 0.530726 0.343146 0.843146C0.0307266 1.15557 0.0307266 1.6621 0.343146 1.97452L5.43431 7.06569ZM5.2 6L5.2 6.5L6.8 6.5L6.8 6L5.2 6Z" fill="black"/>
     </svg>
