--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
 <hr width="1136px;">
 <div class="wrapper">
     <div class="search-strock">
-            <input style="Border: none; outline: none; text-align: center" placeholder="Search something" type="text" class="search-block"<img src="images/search.png">
+            <input style="Border: none; outline: none; text-align: initial" placeholder="Search something" type="text" class="search-block" <img src="images/search.png" alt="search">
 </div>
 </div>
 </body>
